# f1_tenth

./: .gitignore  Test_map_1.pgm
formula-fun/: map1.pgm  map1.yaml  map2.pgm  map2.yaml
formula-fun/lab6_pkg/: CMakeLists.txt
formula-fun/safety_node/: CMakeLists.txt
formula-fun/safety_node/scripts/: safety_node.py
formula-fun/safety_node/src/: safety_node.cpp
formula-fun/wall_follow/scripts/: wall_follow_node.py
formula-fun/wall_follow/src/: wall_follow_node.cpp
sim_ws/: Mpc_Waypoints.txt  Race_2_Map_1_Waypoints.txt  Spielberg_Waypoints.txt  frames.gv  waypoint_data.txt  waypoint_data_map2.txt
sim_ws/bag_plotting/: plot_bags.py
sim_ws/bag_plotting/rosbag2_2023_09_28-16_47_46/: metadata.yaml
sim_ws/install/: local_setup.sh  setup.sh
sim_ws/install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.sh
sim_ws/log/: latest_build
sim_ws/src/f1tenth_gym_ros_2/launch/: RRT_sim_launch.py  gym_bridge_pure_pursuit_launch.py  pure_pursuit.rviz  rrt_sim.rviz
sim_ws/src/f1tenth_gym_ros_2/maps/: levine_obs.yaml
sim_ws/src/gap_follow/: CMakeLists.txt  SUBMISSION.md
sim_ws/src/gap_follow/config/: gap_follow.yaml
sim_ws/src/gap_follow/launch/: gap_follow_launch.py
sim_ws/src/gap_follow/src/: reactive_node.cpp
sim_ws/src/lab6_pkg/: CMakeLists.txt
sim_ws/src/lab6_pkg/config/: params.yaml
sim_ws/src/lab6_pkg/include/rrt/: rrt.h
sim_ws/src/lab6_pkg/launch/: RRT_launch.py
sim_ws/src/lab6_pkg/maps/: map2.yaml
sim_ws/src/lab6_pkg/scripts/: rrt_node.py
sim_ws/src/lab6_pkg/src/: rrt.cpp
sim_ws/src/mpc/: CMakeLists.txt  SUBMISSION.md  package.xml
sim_ws/src/mpc/config/: params.yaml
sim_ws/src/mpc/include/mpc/: mpc.h  mpc_utils.h
sim_ws/src/mpc/launch/: mpc_launch.py
sim_ws/src/mpc/mpc/: utils.py
sim_ws/src/mpc/scripts/: mpc_node.py
sim_ws/src/mpc/src/: mpc.cpp  mpc_node.cpp
sim_ws/src/pure_pursuit/: CMakeLists.txt  SUBMISSION.md
sim_ws/src/pure_pursuit/config/: params.yaml
sim_ws/src/pure_pursuit/launch/: pure_pursuit_launch.py
sim_ws/src/pure_pursuit/src/: car_tf_broadcaster.cpp  pose_transform_node.cpp  pure_pursuit_node.cpp
sim_ws/src/safety_node/: SUBMISSION.md
sim_ws/src/safety_node/src/: safety_node.cpp
sim_ws/src/wall_follow/: CMakeLists.txt  SUBMISSION.md
sim_ws/src/wall_follow/config/: wall_follow.yaml
sim_ws/src/wall_follow/launch/: wall_follow_launch.py
sim_ws/src/wall_follow/src/: wall_follow_node.cpp
sim_ws/src/waypoint_logger/: package.xml  setup.py
sim_ws/src/waypoint_logger/waypoint_logger/: waypoint_logger.py  waypoint_visualizer.py
(+36 files in other folders)
